set width to 100% in <figure> to avoid overflow

--- a/assets/sass/figure.scss
+++ b/assets/sass/figure.scss
@@ -1,4 +1,5 @@
 article > figure > img, 
 article > figure {
 	max-height: 300px;
+	width: 100%;
 }
